test/tests/bad/redundant-case.carth
;; RedundantCase

(defun foo
  (case [True] 0)
  (case [True] 1)
  (case [False] 2))
